fix spacing in theme switcher label

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2816,7 +2816,7 @@ a.rule__name {
   align-items: center;
   gap: .5rem; }
 
-.theme-switcher-label {
+.theme-switcher-label.theme-switcher-label {
   font-size: inherit;
   color: inherit;
   font: inherit;
