--- a/src/assets/scss/components/theme-switcher.scss
+++ b/src/assets/scss/components/theme-switcher.scss
@@ -5,7 +5,7 @@
     gap: .5rem;
 }
 
-.theme-switcher-label {
+.theme-switcher-label.theme-switcher-label {
     font-size: inherit;
     color: inherit;
     font: inherit;
